*SVN*

* Optimise named route generation when using positional arguments.  [Koz]

  This change delivers significant performance benefits for the most
  common usage scenarios for modern rails applications by avoiding the
  costly trip through url_for.  Initial benchmarks indicate this is
  between 6 and 20 times as fast.

* Explicitly require active_record/query_cache before using it.  [Jeremy Kemper]

* Fix layout overriding response status.  #9476 [lotswholetime]

* Add field_set_tag for generating field_sets, closes #9477. [djanowski]

* Allow additional parameters to be passed to named route helpers when using positional arguments.  Closes #8930 [ian.w.white@gmail.com]

* Make render :partial work with a :collection of Hashes, previously this wasn't possible due to backwards compatibility restrictions.  [lifofifo]

* request.host works with IPv6 addresses.  #9458 [yuya]

* Fix bug where action caching sets the content type to the ActionCachePath object.  Closes #9282 [mindforge]

* Find layouts even if they're not in the first view_paths directory.  Closes #9258 [caio]

* Major improvement to the documentation for the options / select form helpers. Closes #9038 [kampers, jardeon, wesg]

* Fix number_to_human_size when using different precisions. Closes #7536. [RichardStrand, mpalmer]

* Added partial layouts (see example in action_view/lib/partials.rb) [DHH]

* Allow you to set custom :conditions on resource routes.  [Rick]

* Fixed that file.content_type for uploaded files would include a trailing \r #9053 [bgreenlee]

* url_for now accepts a series of symbols representing the namespace of the record [Josh Knowles]

* Make :trailing_slash work with query parameters for url_for. Closes #4004 [nov]

* Make sure missing template exceptions actually say which template they were looking for.  Closes #8683 [dasil003]

* Fix errors with around_filters which do not yield, restore 1.1 behaviour with after filters. Closes #8891 [skaes]
