@@ -1,7 +1,0 @@
-<h1>Editing <%= @scaffold_singular_name %></h1>
-
-<%= error_messages_for(@scaffold_singular_name) %>
-<%= form(@scaffold_singular_name, :action => "update#{@scaffold_suffix}") %>
-
-<%= link_to "Show", :action => "show#{@scaffold_suffix}", :id => instance_variable_get("@#{@scaffold_singular_name}") %> |
-<%= link_to "Back", :action => "list#{@scaffold_suffix}" %>
