@@ -1,69 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-  <title>Scaffolding</title>
-  <style>
-    body { background-color: #fff; color: #333; }
-
-    body, p, ol, ul, td {
-      font-family: verdana, arial, helvetica, sans-serif;
-      font-size:   13px;
-      line-height: 18px;
-    }
-
-    pre {
-      background-color: #eee;
-      padding: 10px;
-      font-size: 11px;
-    }
-
-    a { color: #000; }
-    a:visited { color: #666; }
-    a:hover { color: #fff; background-color:#000; }
-
-    .fieldWithErrors {
-      padding: 2px;
-      background-color: red;
-      display: table;
-    }
-
-    #errorExplanation {
-      width: 400px;
-      border: 2px solid red;
-      padding: 7px;
-      padding-bottom: 12px;
-      margin-bottom: 20px;
-      background-color: #f0f0f0;
-    }
-
-    #errorExplanation h2 {
-      text-align: left;
-      font-weight: bold;
-      padding: 5px 5px 5px 15px;
-      font-size: 12px;
-      margin: -7px;
-      background-color: #c00;
-      color: #fff;
-    }
-
-    #errorExplanation p {
-      color: #333;
-      margin-bottom: 0;
-      padding: 5px;
-    }
-
-    #errorExplanation ul li {
-      font-size: 12px;
-      list-style: square;
-    }
-  </style>
-</head>
-<body>
-
-<p style="color: green"><%= flash[:notice] %></p>
-
-<%= yield %>
-
-</body>
-</html>
